--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^7.2.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
