--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@google/generative-ai": "^0.22.0",
     "@tailwindcss/vite": "^4.0.8",
+    "@uiw/react-codemirror": "^4.23.10",
     "firebase": "^11.3.1",
     "lucide-react": "^0.475.0",
+    "marked": "^15.0.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^7.2.0",
+    "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.8"
   },
