--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.22.0",
+    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.0.8",
     "@uiw/react-codemirror": "^4.23.10",
     "firebase": "^11.3.1",
